# relay

./: .dockerignore  .env.dokploy.example  .env.example  .env.production.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.dokploy.yml  docker-compose.prod.yml  docker-compose.yml  pawaPay Merchant API V2.postman_collection.json
.specify/: feature.json  init-options.json
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
config/: wallet_seed_defaults.json
docs/: deploy.md  dokploy.md
docs/integration/: README.md  getting-started.md  invoices-and-pay-page.md  payments.md  reports.md  webhooks.md
frontend/: DESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
migrations/: 001_initial.sql  002_invoices_and_seed_events.sql  003_pay_page.sql  004_webhook_endpoints.sql  005_admin_users.sql  006_system_users.sql  007_batches_and_refunds.sql
openapi/: openapi.yaml
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/relay_sdk/: __init__.py  client.py  errors.py  webhooks.py
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  models.rs
tests/: batch_payout_test.rs  idempotency_test.rs  invoice_refund_test.rs  invoice_webhook_test.rs  invoices_test.rs  pay_page_test.rs  payments_test.rs  reports_test.rs  seed_on_register_test.rs  systems_test.rs  wallets_test.rs  webhook_fanout_test.rs  webhooks_test.rs
workers/: Dockerfile  README.md  package-lock.json  package.json
(+135 files in other folders)
